Change to get JSON file with indent and fixes some issues in Notebook

--- a/2_analysis.ipynb
+++ b/2_analysis.ipynb
@@ -309,7 +309,7 @@
     "    dftest['is_supp'] = dftest['suppression'].apply(lambda x: not set(list_coms).isdisjoint(x))\n",
     "    df2 = dftest[dftest['is_supp'] == True]\n",
     "    df3 = pd.concat([df1,df2])\n",
-    "    return df3[~df3.index.duplicated(keep='first')].sort_values(by=['nom'])"
+    "    return df3[~df3.index.duplicated(keep='first')].sort_values(by=['date'])"
    ]
   },
   {
@@ -327,7 +327,7 @@
     "    dftest['is_supp'] = dftest['suppression'].apply(lambda x: not set(list_coms).isdisjoint(x))\n",
     "    df2 = dftest[dftest['is_supp'] == True]\n",
     "    df3 = pd.concat([df1,df2])\n",
-    "    return df3[~df3.index.duplicated(keep='first')].sort_values(by=['nom'])"
+    "    return df3[~df3.index.duplicated(keep='first')].sort_values(by=['date'])"
    ]
   },
   {
@@ -365,7 +365,7 @@
        "      <th></th>\n",
        "      <th>creation</th>\n",
        "      <th>suppression</th>\n",
-       "      <th>nom</th>\n",
+       "      <th>date</th>\n",
        "      <th>id</th>\n",
        "      <th>type</th>\n",
        "      <th>creationObj</th>\n",
@@ -407,7 +407,7 @@
        "      <td>4d54af6e-0a1a-4b4f-970b-3aa95d51e21e</td>\n",
        "      <td>evenement</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>[{'codeInsee': '27032', 'nom': 'Avrilly', 'nom...</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -421,7 +421,7 @@
        "563   [d171728d-5c4a-48a7-83c2-f62e8db01f99, bfb5f65...   \n",
        "5060                                                 []   \n",
        "\n",
-       "                                            suppression         nom  \\\n",
+       "                                            suppression        date  \\\n",
        "4469                                                 []  1943-01-01   \n",
        "563   [a1ee0f67-b657-418d-822b-7eaab68a89eb, 826d072...  2016-01-01   \n",
        "5060  [bfb5f656-4440-4561-bb49-e2136b9b7803, 9bd0400...  2020-12-31   \n",
@@ -439,7 +439,7 @@
        "                                         suppressionObj  is_create is_supp  \n",
        "4469                                                 []       True     NaN  \n",
        "563   [{'codeInsee': '27634', 'nom': 'Thomer-la-Sôgn...       True     NaN  \n",
-       "5060                                                 []      False    True  "
+       "5060  [{'codeInsee': '27032', 'nom': 'Avrilly', 'nom...      False    True  "
       ]
      },
      "execution_count": 15,
@@ -486,7 +486,7 @@
        "      <th></th>\n",
        "      <th>creation</th>\n",
        "      <th>suppression</th>\n",
-       "      <th>nom</th>\n",
+       "      <th>date</th>\n",
        "      <th>id</th>\n",
        "      <th>type</th>\n",
        "      <th>creationObj</th>\n",
@@ -528,7 +528,7 @@
        "      <td>4d54af6e-0a1a-4b4f-970b-3aa95d51e21e</td>\n",
        "      <td>evenement</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
+       "      <td>[{'codeInsee': '27032', 'nom': 'Avrilly', 'nom...</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -542,7 +542,7 @@
        "563   [d171728d-5c4a-48a7-83c2-f62e8db01f99, bfb5f65...   \n",
        "5060                                                 []   \n",
        "\n",
-       "                                            suppression         nom  \\\n",
+       "                                            suppression        date  \\\n",
        "4469                                                 []  1943-01-01   \n",
        "563   [a1ee0f67-b657-418d-822b-7eaab68a89eb, 826d072...  2016-01-01   \n",
        "5060  [bfb5f656-4440-4561-bb49-e2136b9b7803, 9bd0400...  2020-12-31   \n",
@@ -560,7 +560,7 @@
        "                                         suppressionObj  is_create  is_supp  \n",
        "4469                                                 []       True    False  \n",
        "563   [{'codeInsee': '27634', 'nom': 'Thomer-la-Sôgn...       True     True  \n",
-       "5060                                                 []      False     True  "
+       "5060  [{'codeInsee': '27032', 'nom': 'Avrilly', 'nom...      False     True  "
       ]
      },
      "execution_count": 16,
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "5086"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
        "274"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
