Some fixes and continue analysis - first draft of graph (non totally concluent)

--- a/0_cog-sparql-recuperation-des-donnees.ipynb
+++ b/0_cog-sparql-recuperation-des-donnees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -53,22 +53,15 @@
    ],
    "source": [
     "coms = get_all_ids_from_object(\"http://rdf.insee.fr/def/geo#Commune\")\n",
-    "comds = get_all_ids_from_object(\"http://rdf.insee.fr/def/geo#CommuneAssociee\")\n",
-    "comas = get_all_ids_from_object(\"http://rdf.insee.fr/def/geo#CommuneDeleguee\")\n",
+    "comas = get_all_ids_from_object(\"http://rdf.insee.fr/def/geo#CommuneAssociee\")\n",
+    "comds = get_all_ids_from_object(\"http://rdf.insee.fr/def/geo#CommuneDeleguee\")\n",
     "comfs = get_all_ids_from_object(\"http://rdf.insee.fr/def/geo#CommuneFusionee\")\n",
     "evt = get_all_ids_from_object(\"http://rdf.insee.fr/def/geo#EvenementGeographique\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -124,21 +117,7 @@
      "output_type": "stream",
      "text": [
       "-----COM-----\n",
-      "0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/thomasg/git/cog-sparql-analysis/venv/lib/python3.9/site-packages/SPARQLWrapper/Wrapper.py:979: RuntimeWarning: Sending Accept header '*/*' because unexpected returned format 'json' in a 'DESCRIBE' SPARQL query form\n",
-      "  warnings.warn(\"Sending Accept header '*/*' because unexpected returned format '%s' in a '%s' SPARQL query form\" % (self.returnFormat, self.queryType), RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0\n",
       "100\n",
       "200\n",
       "300\n",
@@ -583,6 +562,18 @@
       "800\n",
       "900\n",
       "1000\n",
+      "-----COMD-----\n",
+      "0\n",
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n",
+      "800\n",
+      "900\n",
+      "1000\n",
       "1100\n",
       "1200\n",
       "1300\n",
@@ -597,18 +588,6 @@
       "2200\n",
       "2300\n",
       "2400\n",
-      "-----COMD-----\n",
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
       "-----COMF-----\n"
      ]
     }
@@ -630,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
