--- a/1_enrichissement_fichiers_json.ipynb
+++ b/1_enrichissement_fichiers_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -137,51 +137,51 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46777</th>\n",
-       "      <td>80768</td>\n",
-       "      <td>Tronchoy</td>\n",
-       "      <td>Tronchoy</td>\n",
-       "      <td>c01b88fb-eb1d-47cb-9948-fc103f8be244</td>\n",
-       "      <td>762ae8d4-1e55-4f23-bcb8-9be14e7df59c</td>\n",
+       "      <td>52402</td>\n",
+       "      <td>Prangey</td>\n",
+       "      <td>Prangey</td>\n",
+       "      <td>42665a68-33eb-47ac-b42d-faa776a5aa1b</td>\n",
+       "      <td>590286cf-300a-4592-85d6-eef829c92350</td>\n",
        "      <td>COMD</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46778</th>\n",
-       "      <td>55240</td>\n",
-       "      <td>Hautecourt-lès-Broville</td>\n",
-       "      <td>Hautecourt-lès-Broville</td>\n",
-       "      <td>b4a8d60f-5e60-4538-9cb4-af0d07e2781e</td>\n",
-       "      <td>3b4bd939-7837-447d-8a6c-d430438f1392</td>\n",
+       "      <td>16351</td>\n",
+       "      <td>Saint-Simeux</td>\n",
+       "      <td>Saint-Simeux</td>\n",
+       "      <td>6df1f004-44a1-4013-8e21-b41cbdbdfdc9</td>\n",
+       "      <td>9220d38e-abed-4614-b8bd-725f762ee9a2</td>\n",
        "      <td>COMD</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46779</th>\n",
-       "      <td>24315</td>\n",
-       "      <td>Paleyrac</td>\n",
-       "      <td>Paleyrac</td>\n",
-       "      <td>01686770-6768-4253-a6b1-0a772aafa37e</td>\n",
-       "      <td>acac479d-d5b1-447c-bda7-def3f4e0885b</td>\n",
+       "      <td>14267</td>\n",
+       "      <td>Feuguerolles-sur-Seulles</td>\n",
+       "      <td>Feuguerolles-sur-Seulles</td>\n",
+       "      <td>09369351-d43d-4010-ab30-0a3fbbb333cf</td>\n",
+       "      <td>36eac5c3-921e-4868-be58-2e80505ac5b1</td>\n",
        "      <td>COMD</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46780</th>\n",
-       "      <td>80382</td>\n",
-       "      <td>Gouy-l'Hôpital</td>\n",
-       "      <td>Gouy-l'Hôpital</td>\n",
-       "      <td>c01b88fb-eb1d-47cb-9948-fc103f8be244</td>\n",
-       "      <td>05832243-dfe4-440e-b109-3471d86d0ceb</td>\n",
+       "      <td>14673</td>\n",
+       "      <td>Sermentot</td>\n",
+       "      <td>Sermentot</td>\n",
+       "      <td>09369351-d43d-4010-ab30-0a3fbbb333cf</td>\n",
+       "      <td>01be2ebd-1941-4e8c-aa07-4725449db68d</td>\n",
        "      <td>COMD</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46781</th>\n",
-       "      <td>25146</td>\n",
-       "      <td>Chazoy</td>\n",
-       "      <td>Chazoy</td>\n",
-       "      <td>6f078781-de0c-4835-89c8-29ac5ee3ac4b</td>\n",
-       "      <td>97d77459-290d-46e9-8f7c-c64345e6f8f5</td>\n",
+       "      <td>14479</td>\n",
+       "      <td>Orbois</td>\n",
+       "      <td>Orbois</td>\n",
+       "      <td>09369351-d43d-4010-ab30-0a3fbbb333cf</td>\n",
+       "      <td>13429b51-92ba-4b50-a06a-2d8613c46100</td>\n",
        "      <td>COMD</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -191,18 +191,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      codeInsee                      nom           nomSansArticle  \\\n",
-       "0         32019                 Auterive                 Auterive   \n",
-       "1         02181          Chéry-lès-Rozoy          Chéry-lès-Rozoy   \n",
-       "2         91639       Vayres-sur-Essonne       Vayres-sur-Essonne   \n",
-       "3         78639       Vayres-sur-Essonne       Vayres-sur-Essonne   \n",
-       "4         19267              La Tourette                 Tourette   \n",
-       "...         ...                      ...                      ...   \n",
-       "46777     80768                 Tronchoy                 Tronchoy   \n",
-       "46778     55240  Hautecourt-lès-Broville  Hautecourt-lès-Broville   \n",
-       "46779     24315                 Paleyrac                 Paleyrac   \n",
-       "46780     80382           Gouy-l'Hôpital           Gouy-l'Hôpital   \n",
-       "46781     25146                   Chazoy                   Chazoy   \n",
+       "      codeInsee                       nom            nomSansArticle  \\\n",
+       "0         32019                  Auterive                  Auterive   \n",
+       "1         02181           Chéry-lès-Rozoy           Chéry-lès-Rozoy   \n",
+       "2         91639        Vayres-sur-Essonne        Vayres-sur-Essonne   \n",
+       "3         78639        Vayres-sur-Essonne        Vayres-sur-Essonne   \n",
+       "4         19267               La Tourette                  Tourette   \n",
+       "...         ...                       ...                       ...   \n",
+       "46777     52402                   Prangey                   Prangey   \n",
+       "46778     16351              Saint-Simeux              Saint-Simeux   \n",
+       "46779     14267  Feuguerolles-sur-Seulles  Feuguerolles-sur-Seulles   \n",
+       "46780     14673                 Sermentot                 Sermentot   \n",
+       "46781     14479                    Orbois                    Orbois   \n",
        "\n",
        "                                evtCreation  \\\n",
        "0      904dcf14-b895-4686-a5c5-7304c6f63cae   \n",
@@ -211,11 +211,11 @@
        "3      904dcf14-b895-4686-a5c5-7304c6f63cae   \n",
        "4      904dcf14-b895-4686-a5c5-7304c6f63cae   \n",
        "...                                     ...   \n",
-       "46777  c01b88fb-eb1d-47cb-9948-fc103f8be244   \n",
-       "46778  b4a8d60f-5e60-4538-9cb4-af0d07e2781e   \n",
-       "46779  01686770-6768-4253-a6b1-0a772aafa37e   \n",
-       "46780  c01b88fb-eb1d-47cb-9948-fc103f8be244   \n",
-       "46781  6f078781-de0c-4835-89c8-29ac5ee3ac4b   \n",
+       "46777  42665a68-33eb-47ac-b42d-faa776a5aa1b   \n",
+       "46778  6df1f004-44a1-4013-8e21-b41cbdbdfdc9   \n",
+       "46779  09369351-d43d-4010-ab30-0a3fbbb333cf   \n",
+       "46780  09369351-d43d-4010-ab30-0a3fbbb333cf   \n",
+       "46781  09369351-d43d-4010-ab30-0a3fbbb333cf   \n",
        "\n",
        "                                         id  type  \\\n",
        "0      4c09a74f-4b9d-4c2c-9e03-5574c979aa97   COM   \n",
@@ -224,11 +224,11 @@
        "3      6cb8d621-e597-48ba-a6eb-dbf0bf2141f6   COM   \n",
        "4      af2b312b-b2bd-490b-9591-d6596f37d6b8   COM   \n",
        "...                                     ...   ...   \n",
-       "46777  762ae8d4-1e55-4f23-bcb8-9be14e7df59c  COMD   \n",
-       "46778  3b4bd939-7837-447d-8a6c-d430438f1392  COMD   \n",
-       "46779  acac479d-d5b1-447c-bda7-def3f4e0885b  COMD   \n",
-       "46780  05832243-dfe4-440e-b109-3471d86d0ceb  COMD   \n",
-       "46781  97d77459-290d-46e9-8f7c-c64345e6f8f5  COMD   \n",
+       "46777  590286cf-300a-4592-85d6-eef829c92350  COMD   \n",
+       "46778  9220d38e-abed-4614-b8bd-725f762ee9a2  COMD   \n",
+       "46779  36eac5c3-921e-4868-be58-2e80505ac5b1  COMD   \n",
+       "46780  01be2ebd-1941-4e8c-aa07-4725449db68d  COMD   \n",
+       "46781  13429b51-92ba-4b50-a06a-2d8613c46100  COMD   \n",
        "\n",
        "                             evtSuppression  \n",
        "0                                       NaN  \n",
@@ -246,7 +246,7 @@
        "[46782 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "[5086 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "[5086 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
