--- a/2_analysis.ipynb
+++ b/2_analysis.ipynb
@@ -1306,13 +1306,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ne pas tenir compte du bloc ci-dessous :"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 288,
    "metadata": {},
@@ -3186,14 +3179,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "événements, plusieurs cas :\n",
-    "- 0 suppression, 1 création : ok\n",
+    "Chaque commune possède un identifiant unique : TYPE-CODEINSEE@DATE_EVT_CREATION\n",
+    "\n",
+    "Exemple :\n",
+    "Tartampion 27455 Tartampion 27455 le 1er janvier 1970\n",
+    "a considéré comme deux objets distincts même si le cas semble bizarre, du point de vue de la base de données, il faut le considérer comme deux objets distincts. Ici, avec deux identifiants :\n",
+    "COM-27455@1943-01-01 \n",
+    "COM-27455@1970-01-01\n",
+    "\n",
+    "Pour gérer l'historique et le graphe, nous avons besoin de créer deux nouveaux types de commune :\n",
+    "- COMP : commune Périmée : une fois qu'une commune est supprimée mais n'a pas de successeur, il faut créer une COMP\n",
+    "- COMT : commune Transitoire : lorsque l'événement ne permet pas d'associer un successeur ou un prédecesseur unique, nous avons besoin de créer une commune transitoire qui se charge de faire la jointure entre les communes supprimées et communes créées\n",
+    "\n",
+    "Quand on parle ci-dessous de création ou de suppression, il s'agit de création ou de suppression d'objet Commune COM (et non pas COMA ou COMD) :\n",
+    "\n",
+    "Gestion des événements, plusieurs cas :\n",
+    "- 0 suppression, 1 création : \n",
+    "    - la commune créé ne possède pas de prédécesseur\n",
     "- 0 suppression, N création : ok\n",
+    "    - les communes créées ne possèdent pas de prédecesseurs\n",
     "- 1 suppression, 1 création : ok\n",
-    "- 1 suppression, N création : ok\n",
+    "    - la commune créé possède un prédécesseur\n",
+    "    - la commune supprimée possède un successeur\n",
+    "- 1 suppression, N création : besoin d'une commune transitoire\n",
+    "    - la commune supprimée a pour successeur la commune transitoire\n",
+    "    - les communes créées ont pour prédecesseur la commune transitoire\n",
+    "    - la commune transitoire créée n'a pas de successeur ni de prédecesseur\n",
     "- N suppression, 0 création : ok\n",
-    "    N suppression, 1 création : ok\n",
-    "    N suppression, N création : besoin d'une commune transitoire"
+    "    - les communes supprimées ont pour chacune un objet COMP (Commune Périmée) a créer.\n",
+    "- N suppression, 1 création : besoin d'une commune transitoire\n",
+    "    - les communes supprimées ont pour successeurs la commune transitoire\n",
+    "    - la commune créée a pour prédecesseur la commune transitoire\n",
+    "    - la commune transitoire créée n'a pas de successeur ni de prédecesseur\n",
+    "- N suppression, N création : besoin d'une commune transitoire\n",
+    "    - les communes supprimées ont pour successeurs la commune transitoire\n",
+    "    - les communes créées ont pour prédecesseurs la commune transitoire\n",
+    "    - la commune transitoire créée n'a pas de successeur ni de prédecesseur\n",
+    "\n",
+    "Propriétés des objets communes COM, COMD... :\n",
+    "- nom ; type ; dateDebut ; code ; predecesseur ; id ; idEvt ; successeur\n",
+    "Propriétés des objets commune transitoire COMT :\n",
+    "- nom ; type ; dateDebut ; code ; id ; idEvt\n"
    ]
   },
   {
